2.6.0
[update] Update Twitch API usage from v5 to Helix
    - This change will require you to generate a new oauth token from the add-on settings
    - Some favorites may need to be recreated
[add] Add to queue context menu item
[rem] Blacklisting of content
[lang] updated translations from Weblate

2.5.12
[add] new menu icons - Goldenfreddy0703
[lang] updated translations from Weblate

2.5.11
[fix] fix follow/unfollow channels - apo86
[lang] updated translations from Weblate

2.5.10
[fix] Playback of re-runs - apo86
[fix] New OAuth token generation

2.5.9
[fix] Signal end_of_directory when an exception appears - DimmKG

2.5.7
[fix] Python 2 encoding issues - DimmKG
[lang] update Russian translation - DimmKG

2.5.6
[fix] Python 2 encoding issues

2.5.5
[fix] dialogs
[lang] added Russian translation - DimmKG

2.5.4
[fix] followed games for users with private oauth tokens
[upd] use xbmcvfs.translatePath if available, clean up for Kodi 19

2.5.3
[rem] remove usage of xbmc.LOGSEVERE, it's being removed in Kodi 19

2.5.2
[add] Add additional stream properties at playback
[fix] Get OAuth token on Kodi 19
[upd] Use new settings format on Kodi 19
[upd] Update material to reflect repository changes

2.5.1
[fix] encoding issue causing streams/videos/live notifications to be inaccessible with some languages

2.5.0
[fix] language setting
[fix] show vodcasts in Following Live Channels
[fix] logging in Kodi 19
[upd] frame rate limiting to allow for 60 fps limit
[lang] fr_FR |contrib: alan7000|

2.4.10
[fix] fix live notifications
[fix] fix clips
[fix] double entries in followed live streams

2.4.9
[fix] fix listing live streams

2.4.8
[fix] resolve indefinite busy dialog on failed playback
[fix] sort by viewers for followed live channels, restoring previous behavior
[fix] menu settings not taking effect
[fix] handle no stream available error
[rem] remove Playlists

2.4.7
[fix] remaining private api calls ie. following games, toggle following games

2.4.6